@@ -1,0 +1,12 @@
+
+.calendar-calendar .week-view #multi-day-container,
+.calendar-calendar .week-view #single-day-container,
+.calendar-calendar .day-view #multi-day-container,
+.calendar-calendar .day-view #single-day-container {
+  overflow-y: auto;
+  overflow-x: auto;
+}
+ .calendar-calendar .week-view #single-day-container,
+ .calendar-calendar .day-view #single-day-container {
+  height: auto;
+}
