@@ -55,6 +55,7 @@
 </div>
 <div class="header-body-divider">&nbsp;</div>
 <div id="single-day-container">
+  <?php if (!empty($scroll_content)) : ?>
   <script>
     try {
   	  // Hide container while it renders...  Degrade w/o javascript support
@@ -63,6 +64,7 @@
       // swallow 
     }
   </script>
+  <?php endif; ?>
   <table class="full">
     <tbody>
       <tr class="holder">
@@ -121,6 +123,7 @@
 </div>
 <div class="single-day-footer">&nbsp;</div>
 </div></div>
+<?php if (!empty($scroll_content)) : ?>
 <script>
 try {
   // Size and position the viewport inline so there are no delays
@@ -131,3 +134,4 @@ try {
   // swallow 
 }
 </script>
+<?php endif; ?>
