@@ -10,6 +10,7 @@ The links at the top of the calendar page have been reworked into tabs. They wil
 until you clear the caches. Use hook_calendar_links_alter() to alter the links or the titles
 or to empty the links array if you don't want to see them.
 
+- Issue #1292148, Make scrolling in day and week view optional.
 - Issue #462748, Make sure calendar links can be deleted as well as created.
 - Issue #1301734 by Danny_Joris, Do not show any links to disabled displays.
 - Issue #1383782 by googletorp, Check if module_exists('taxonomy') before creating taxonomy strip options.
